# compare-csv

./: Cargo.toml  README.md
examples/: base.csv  broken_len.csv  delta.csv  history.csv  postings.csv
src/: app.rs  columns.rs  core.rs  expr.rs  lib.rs  main.rs  quotient.rs  record.rs  table.rs
