[package]
name = "compare-csv"
version = "0.1.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1.1.3"
strum = "0.18.0"
strum_macros = "0.18.0"
chrono = "0.4.19"
rust_decimal = "1.8.1"
atty = "0.2.14"
thiserror = "1.0"
eyre = "0.6.1"
color-eyre = "0.5"
log = "0.4"
env_logger = "0.7"
owo-colors = "1.2.1"
